--- a/Contact/Contact.html
+++ b/Contact/Contact.html
@@ -9,6 +9,8 @@
     <link rel="icon" href="../assets/images/Symbol spoon.svg" />
     <script src="../app.js"></script>
     <script src="./Contact.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.3/dist/sweetalert2.all.min.js"></script>
+
   </head>
   <header id="nav-bar">
     <div class="nav-bar nav-bar-unscrolled">
@@ -38,7 +40,7 @@
           height="24px"
           viewBox="0 -960 960 960"
           width="24px"
-          fill="#5f6368"
+          fill="silver"
         >
           <path
             d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"
