--- a/Home/Home.html
+++ b/Home/Home.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Restoran</title>
     <link rel="stylesheet" href="../styles.css" />
-    <link rel="stylesheet" href="Home.css" />
+    <link rel="stylesheet" href="home.css" />
     <link rel="icon" href="../assets/images/Symbol spoon.svg" />
     <script src="../app.js"></script>
-    <script src="./Home.js"></script>
+    <script src="./home.js"></script>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.3/dist/sweetalert2.min.css"
@@ -20,11 +20,11 @@
     <div class="nav-bar nav-bar-unscrolled">
       <img src="../assets/images/logo.png" />
       <nav>
-        <a id="home" class="nav-btn" href="/Home/Home.html#menu-section"
+        <a id="home" class="nav-btn" href="/home/home.html#menu-section"
           >Home</a
         >
-        <a id="contact" class="nav-btn" href="/Contact/Contact.html">Contact</a>
-        <a class="book-table-btn" href="#reservation">Book A Table</a>
+        <a id="contact" class="nav-btn" href="/contact/contact.html">Contact</a>
+        <a class="book-table-btn" href="/home/home.html#reservation">Book A Table</a>
       </nav>
       <div class="mobile-nav-menu-icon" onclick="showHideNavMobileMenu()">
         <svg
@@ -46,7 +46,7 @@
           <a
             id="home"
             class="nav-btn"
-            href="/Home/Home.html#menu-section"
+            href="/home/home.html#menu-section"
             
             >Home</a
           >
@@ -55,7 +55,7 @@
           <a
             id="contact"
             class="nav-btn"
-            href="/Contact/Contact.html"
+            href="/contact/contact.html"
             
             >Contact</a
           >
