--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script>
       window.location.href = "/home/home.html";
     </script>
+    <meta name="google-site-verification" content="EWlqaQMbhuIhvnmVF4PEO4uXQy_YD9tYwakv6VeqREc" />
   </head>
   <body>
     <p>
